--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
+    "jimp": "^0.2.28",
     "node-sass": "^4.5.3",
+    "responsive-loader": "^0.7.0",
     "sass-loader": "^6.0.5"
   }
 }
