--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -121,8 +121,8 @@ collections: # A list of collections the CMS should be able to edit
               - {label: "File", name: "file", widget: "file"}
               - {label: "Select", name: "select", widget: "select", options: ["a", "b", "c"]}
               - {label: "Hidden", name: "hidden", widget: "hidden", default: "hidden"}
-          - label: "Überschriften"
-            name: "list"
+          - label: "Bilder"
+            name: "bilder"
             widget: "list"
             fields:
               - {label: "String", name: "string", widget: "string"}
