--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,31 +10,32 @@ public_folder: "/" # The src attribute for uploaded media will begin this path
 collections: # A list of collections the CMS should be able to edit
   - name: "projects" # all the things in one entry, for documentation and quick testing
     label: "Projekte"
-    file: "static/data/projekte.json"
-    fields:
-      - label: "Projekte"
-        name: "projects"
-        widget: "object"
-        fields:
-          - label: "Projekt"
-            name: "project"
-            widget: "list"
-            fields:
-              - label: "Seite"
-                name: "slide"
-                widget: "list"
-                fields:
-                  - {label: "Seitentitel", name: "title", widget: "string"}
-                  - label: "Seiteninhalte"
-                    name: "elements"
-                    widget: "object"
-                    fields:
-                      - label: "Überschriften"
-                        name: "list"
-                        widget: "list"
-                        fields:
-                          - {label: "headline", name: "type", widget: "hidden", default: "hidden"}
-                          - {label: "Überschrift", name: "content", widget: "string"}
-                          - {label: "Abstand links in %", name: "positionLeftInPercent", widget: "number"}
-                          - {label: "Abstand von oben in %", name: "positionTopInPercent", widget: "number"}
-                          - {label: "z-index", name: "zIndex", widget: "number"}
+    files:
+      file: "static/data/projekte.json"
+      fields:
+        - label: "Projekte"
+          name: "projects"
+          widget: "object"
+          fields:
+            - label: "Projekt"
+              name: "project"
+              widget: "list"
+              fields:
+                - label: "Seite"
+                  name: "slide"
+                  widget: "list"
+                  fields:
+                    - {label: "Seitentitel", name: "title", widget: "string"}
+                    - label: "Seiteninhalte"
+                      name: "elements"
+                      widget: "object"
+                      fields:
+                        - label: "Überschriften"
+                          name: "list"
+                          widget: "list"
+                          fields:
+                            - {label: "headline", name: "type", widget: "hidden", default: "hidden"}
+                            - {label: "Überschrift", name: "content", widget: "string"}
+                            - {label: "Abstand links in %", name: "positionLeftInPercent", widget: "number"}
+                            - {label: "Abstand von oben in %", name: "positionTopInPercent", widget: "number"}
+                            - {label: "z-index", name: "zIndex", widget: "number"}
