--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,6 +9,7 @@ public_folder: "/" # The src attribute for uploaded media will begin this path
 
 collections: # A list of collections the CMS should be able to edit
   - name: "projects" # all the things in one entry, for documentation and quick testing
+    create: true # Allow users to create new documents in this collection
     label: "Projekte"
     files:
       file: "static/data/projekte.json"
