--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "gulp && nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
@@ -24,6 +24,8 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
+    "gulp": "^3.9.1",
+    "gulp-responsive": "^2.7.1",
     "jimp": "^0.2.28",
     "node-sass": "^4.5.3",
     "responsive-loader": "^0.7.0",
