--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
+    "glob-loader": "^0.3.0",
     "gulp": "^3.9.1",
     "gulp-responsive": "^2.7.1",
     "jimp": "^0.2.28",
